<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>
    <string name="toast_for_more_than_100">You cannot add more than 100 coffees</string>
    <string name="toast_for_less_than_0">You cannot add less than 0 coffee</string>
    <string name="mail_subject">JustJava Order For</string>
    <string name="name_summary">Name:<xliff:g id="name" example="Amy">%s</xliff:g> </string>
    <string name="add_whipped_cream">Add whipped cream?</string>
    <string name="add_chocolate">Add chocolate?</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total: $</string>
    <string name="thank_you">Thank you!</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order">ORDER</string>
    <string name="name">Name</string>
</resources>
